--- a/app/assets/css/login.css
+++ b/app/assets/css/login.css
@@ -7,7 +7,8 @@ body {
 
 .container {
     padding: 25px;
-    position: fixed;
+   
+    margin-left: auto; margin-right: auto; text-align: center"
 }
 
 .form-login {
