--- a/app/assets/css/login.css
+++ b/app/assets/css/login.css
@@ -8,7 +8,7 @@ body {
 .container {
     padding: 25px;
    
-    margin-left: auto; margin-right: auto; text-align: center"
+    margin-left: auto; margin-right: auto; text-align: center
 }
 
 .form-login {
